[tool.poetry]
name = "mongodb_example"
version = "0.1.0"
description = ""
authors = ["Jane Baxter"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = {version = "^4.2.0", extras = ["srv"]}

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
